--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/aahanaggarwal/calculator/issues"
   },
-  "homepage": "https://github.com/aahanaggarwal/calculator#readme"
+  "homepage": "https://github.com/aahanaggarwal/calculator#readme",
+  "dependencies": {
+    "bootstrap": "4.3.1",
+    "jquery": "^3.4.1"
+  }
 }
